# armored-steel-borne

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml  http  package-lock.json  package.json  tailwind.config.js  typeshare.toml
.sqlx/: query-025dd77c9d8b0403f9406da15650618bf161177d1731ad497a4d1940cc6f4df6.json  query-171550ee6352e2848201d0e46f03625583c67b2b44ace806ce0486bd44c59e9d.json  query-80297518c77eb5d66e2037dcc1f6af26b09e1868c69e5108b85c0f3432eba9f8.json  query-91f3cc86bcf7eb5199949c9b4a0286a5e2bca60fc60008e3a66b1f64972e1a7e.json  query-bf33900f87a4f02697540752db125742c4f8e4744ebe172a844a6e7bc67f0418.json  query-bf83fef226bf64ea6397765db991d4b421bbae374d69fbb189a9097ff1c6f50a.json
backend/: Cargo.toml
backend/migrations/: 20240525010726_ac_assemblies.sql  20240525012135_dummy_data.sql
backend/src/: api.rs  auth.rs  main.rs  payments.rs  repository.rs
backend/src/api/: ac_assemble.rs  route.rs
backend/src/repository/: assemblies.rs  test_utils.rs
doc/: openapi: '3.0.yml
share/: Cargo.toml  assemble_type.ts  readme.md
share/src/: model.rs
share/src/model/: Assemble.rs  ac6_master.rs  assemble.rs  assemble_core.rs  assemble_reqres.rs
src/: url.ts
src/components/: Navigation.tsx  navbar.tsx
src/features/ac_assemble/: AssembleBoard.tsx  AssembleDetail.tsx  AssembleUpload.tsx  AuthedAssembleBoard.tsx  AuthedAssembleDetail.tsx  ac6Types.ts  dummyData.ts  index.module.css
src/pages/: assemble.tsx  debug.tsx  index.tsx
src/pages/asmdashboard/: [id].tsx  [ulid].tsx  edit.tsx  index.tsx  upload.tsx
src/pages/assembledetail/: [id].tsx  (+1 more)
(+15 files in other folders)
